add pageable getters to catalog service